--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ a:link, a:visited {
     text-align: center;
     text-decoration: none;
     display: inline-block;
+    border-radius: 10px;
   }
   
   a:hover, a:active {
