--- a/css/main.css
+++ b/css/main.css
@@ -18,4 +18,7 @@ a:link, a:visited {
     background-color: rgba(0,100,255,1);
     border: 2px solid rgba(0,100,255,0.5);
   }
+.logo:link, .logo:visited, .logo:hover , .logo:active{
+color:#ffffff;
+}
 img {vertical-align: middle;}
