--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,8 @@ h1 {color:rgb(255, 255, 255); text-align: center;}
 h4 {color: #ffffff; text-align: center;}
 p {color:rgb(255, 255, 255);}
 hr {color: rgb(255,255,255); border: solid;}
-.logo {color: white;}
-a:not(.logo):link, a:visited{
+.logo {color: white; text-decoration: none;}
+a:not(.logo):link, a:not(.logo):visited{
     background-color: rgba(0,100,255,0.5);
     color: white;
     border: 2px solid rgba(0,100,255,0.5);
@@ -15,7 +15,7 @@ a:not(.logo):link, a:visited{
     border-radius: 10px;
   }
   
-  a:hover, a:active {
+  a:not(.logo):hover, a:not(.logo):active {
     background-color: rgba(0,100,255,1);
     border: 2px solid rgba(0,100,255,0.5);
   }
