--- a/css/main.css
+++ b/css/main.css
@@ -4,11 +4,21 @@ h4 {color: #ffffff; text-align: center;}
 p {color:rgb(255, 255, 255);}
 hr {color: rgb(255,255,255); border: solid;}
 .logo {color: white; text-decoration: none;}
-a:not(.logo):link, a:not(.logo):visited{
+.title-links{
     background-color: rgba(0,100,255,0.5);
     color: white;
     border: 2px solid rgba(0,100,255,0.5);
     padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 0px;
+}
+a:not(.logo):link, a:not(.logo):visited{
+    background-color: rgba(0,100,255,0.5);
+    color: white;
+    border: 2px solid rgba(0,100,255,0.5);
+    padding: 15px 25px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
