--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body {background-color:rgb(40, 40, 40); font-family: sans-serif}
 h1 {color:rgb(255, 255, 255);}
+h1 {color:rgb(255, 255, 255);}
 h4 {color: #ffffff; text-align: center;}
 p {color:rgb(255, 255, 255);}
 hr {color: rgb(255,255,255); border: solid;}
@@ -11,7 +12,7 @@ hr {color: rgb(255,255,255); border: solid;}
     background-color: rgba(0,100,255,0.5);
     color: white;
     border: 2px solid rgba(0,100,255,0.5);
-    padding: 5px 10px;
+    padding: 5px 10px !important;
     text-align: center;
     text-decoration: none;
     display: inline-block;
