--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,8 @@ p {color:rgb(255, 255, 255);}
 hr {color: rgb(255,255,255); border: solid;}
 .logo {color: white; text-decoration: none;}
 .main-title{
-    background-color: rgba(0,100,255,0.5);}
+    background-color: rgba(0,100,255,0.5);
+    padding: 5px 10px !important;}
 .t-logos{
     width: 32px;
     height: 32px;}
