--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 body {background-color:rgb(40, 40, 40); font-family: sans-serif}
+pre {font-family: sans-serif;}
 h1 {color:rgb(255, 255, 255);}
 h2 {color:rgb(255, 255, 255);}
 h4 {color: #ffffff; text-align: center;}
