--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ position: fixed;}
 }
 .footer-link:link, .footer-links:visited{
   background-color: rgba(0,0,0,0) !important;
-  color: blue!important;
+  color: rgb(0,0,255) !important;
   border: 2px solid rgba(0,100,255,0) !important;
   padding: 5px 10px !important;
   text-align: center;
@@ -41,7 +41,7 @@ position: fixed;}
   border-radius: 0px !important;}
   .footer-link:hover, .footer-link:active{
     background-color: rgba(0,0,0,0) !important;
-    color: white!important;
+    color: white !important;
     border: 2px solid rgb(0,100,255) !important;
     padding: 2px 8px !important;
     text-align: center;
