--- a/css/main.css
+++ b/css/main.css
@@ -41,9 +41,9 @@ position: fixed;}
   border-radius: 0px !important;}
   .footer-link:hover, .footer-link:active{
     background-color: rgba(0,0,0,0) !important;
-    color: white !important;
+    color: rgb(0,0,255) !important;
     border: 2px solid rgb(0,100,255) !important;
-    padding: 2px 8px !important;
+    padding: 1px 4px !important;
     text-align: center;
     text-decoration: none;
     display: inline-block;
