--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ position: fixed;}
   border-radius: 0px !important;}
 .footer-link:hover, .footer-link:active{
     background-color: rgba(0,0,0,0) !important;
-    color: rgb(0,0,255) !important;
+    color: white !important;
     border: 2px solid rgb(0,100,255) !important;
     padding: 1px 4px !important;
     text-align: center;
