--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,7 @@ a:link, a:visited{
 .f-link:link, .f-link:visited{
   color: blue !important;
   background-color: rgba(0,100,255,0.0) !important;
+  border: rgba(0,0,0,0.0)
 }
 
 img {vertical-align: middle;}
