<noscript>javascript must be enabled to properly display this page</noscript>

--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,10 @@
     margin-block-end: 0em;
   }
 
+  noscript {
+    color: rgb(255, 255, 255);
+  }
+
   .main-title-text {
     color: #fff;
     text-decoration: none;
