--- a/css/main.css
+++ b/css/main.css
@@ -108,12 +108,31 @@
       background-color: rgba(100, 100, 100, 0.5);
       color: white;
       border: 2px solid rgba(100, 100, 100, 0.5);
-      padding: 15px 25px;
+      padding: 10px 10px;
       text-align: center;
       text-decoration: none;
       display: inline-block;
       border-radius: 10px;
   }
+
+  .webringBtn:link,
+  .webringBtn:visited {
+    background-color: rgba(0, 100, 255, 0.5);
+    color: white;
+    border: 2px solid rgba(0, 100, 255, 0.5);
+    padding: 10px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 10px;
+  }
+
+  .webringBtn:hover,
+  .webringBtn:active {
+    background-color: rgba(0, 100, 255, 1);
+    border: 2px solid rgba(0, 100, 255, 0.5);
+  }
+
 
   .btn:link,
   .btn:visited {
@@ -132,7 +151,7 @@
     background-color: rgba(0, 100, 255, 1);
     border: 2px solid rgba(0, 100, 255, 0.5);
   }
-
+  
   .f-link:link,
   .f-link:visited {
     color: rgb(0, 73, 184) !important;
